<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name" translatable="false">ROM Updater</string>
	
	<string name="view_versions_list">Lista de versões</string>
	<string name="view_preferences">Preferências</string>
	<string name="view_repositories">Lista de repositórios</string>
	<string name="view_restore">Restaurar um backup</string>
	<string name="view_downloads">Arquivos zipados baixados</string>
	<string name="view_version">Detalhes do pacote</string>
	<string name="check_for_updates">Procurar atualizações</string>
	<string name="downloaded_files">Arquivos baixados</string>
	<string name="settings">Ajustes...</string>
	<string name="wipe_cache">Limpar dalvik cache</string>
	<string name="wipe_data">Excluir aplicativos e dados</string>
	<string name="backup">Backup</string>
	<string name="backup_rom">Backup da ROM</string>
	<string name="restore_rom">Restaurar backup da ROM</string>
	<string name="recovery">Modo Recuperação</string>
	<string name="bootmenu">Bootmenu</string>
	<string name="rom_repository">Repositório da ROM</string>
	<string name="pref_other">Outros ajustes</string>
	<string name="send_anon_title">Enviar dados anonimamente</string>
	<string name="send_anon_summary">Enviar anonimamente ao autor do aplicativo: o nome da ROM, a versão e a URL. Dados pessoais não serão enviados.</string>
	<string name="repository_url_manual">URL do repositório (manual)</string>
	<string name="repository_url_manual_summary">Inserir manualmente, na caixa de texto, uma URL de repositório</string>
	<string name="backup_folder_title">Pasta para backup</string>
	<string name="backup_folder_summary">Pasta do SDCard, ex. clockworkmod/backup para /sdcard/clockworkmod/backup</string>
	<string name="repository_url_qr">URL do respositório (QR code)</string>
	<string name="repository_url_qr_summary">Usar URL de repositório via Barcode Scanner (necessária instalação)</string>
	<string name="repository_list_summary">Lista de ROMs disponíveis</string>
	<string name="OK">OK</string>
	<string name="cancel">Cancelar</string>
	<string name="yes">Sim</string>
	<string name="no">Não</string>
	<string name="wipe">Excluir</string>
	<string name="recovery_ok">Recuperar</string>
	<string name="upgrade_ok">Atualizar</string>
	<string name="menu_info_title">Informações</string>
	<string name="menu_settings">Ajustes</string>
	<string name="menu_info_exit">Sair</string>
	<string name="capital_version">Versão</string>
	<string name="version_descriptor_not_found_title">Descriptor não encontrado</string>
	<string name="apply_repo">Você deseja usar este repositório?</string>
	<string name="alert">Atenção</string>
	<string name="important">Importante</string>
	<string name="delete_backup">Deletar backup</string>
	<string name="delete_zip">Deletar arquivo</string>
	<string name="backup_and_wipe">Backup e wipe</string>
	<string name="backup_only">Backup somente</string>
	<string name="install">Instalar</string>
	<string name="loading">Carregando, aguarde...</string>
	<string name="version_changelog_title">Registro :</string>

	<string name="list_rom_versions">Lista de versão(ões) de ROM</string>
	<string name="start_full_download">Iniciar Download</string>
	<string name="downloading">Baixando</string>

	<!-- do not translate - for repo device overlay ! -->
	<string name="device_name"></string>
	<string name="reposerver_url"></string>
	<string name="statserver_url">http://www.elegosproject.org/android/upload.php</string>
	<string name="all_repos_url">http://www.elegosproject.org/android/repositories.php</string>
</resources>
